Implement Wreck Riff 0.2 gameplay foundation